               tests,

             • change behaviour of the argument ‘na.rm’. If a data set
               is provided containing ‘NA’ values also the
               corresponding values in provided by the argument
               ‘preheat’ are cleaned up. This allows a proper usage of
               the function in combination with grouping option (e.g.,
               ‘boxplot = TRUE’.

             • minor corrections in error handling and graphical
               appearance.

         • ‘plot_Histogram()’:

             • Change default y-axis labelling from 'Counts' to
               'Frequency',

             • support of ‘par(mfcol())’ (#146),

             • support of data without and ‘NA’-values for error values
               (#152, #162),

             • implementation of ‘calc_Stats()’-call for extended
               statistic summary,

             • support of summary keywords "kurtosis" and "skewness"

         • ‘plot_KDE()’:

             • wrong x-axis and y-axis limit calculation fixed (#158),

             • renaming and extension of summary and ‘summary.pos’
               parameter,

             • plot now longer shows a density error when no error
               exists (#160),

             • De.stats error fixed (#163),

             • support of ‘par(mfcol())’.

         • ‘plot_GrowthCurve()’:

             • Minor graphical and code polishing,

             • fix wrong regneration point plotting, if sequence
               contains more then one zero dose point,

             • argument ‘na.exclude’ for the sake consistency replaced
               by ‘na.rm’,

             • proper error message provided if nothing is left after
               ‘NA’ value removal,

             • overshoot of normal distribution curve in MC simulation
               plot corrected (#111),

             • argument ‘output.plotExtended.single’ added allowing a
               single window plot output of all plots,
